--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mocha": "^3.1.0",
     "phantomjs-prebuilt": "^2.1.12",
     "prosthetic-hand": "^1.3.1",
-    "rollup": "^0.36.1",
+    "rollup": "0.38",
     "rollup-plugin-json": "^2.0.2",
     "rollup-watch": "^2.5.0",
     "source-map": "^0.5.6",
