add postinstall rule

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "test": "jake test",
     "build": "jake build",
+    "postinstall": "jake build",
     "release": "./build/publish.sh"
   },
   "eslintConfig": {
